@@ -16,8 +16,16 @@ DIST sbcl-1.0.23-x86-linux-binary.tar.bz2 8330838 RMD160 93811e756b20d1e3234c9ef
 DIST sbcl-1.0.25-x86-64-linux-binary.tar.bz2 8207707 RMD160 8672331b76c9b9ec13f9466b9f3575eabea72b05 SHA1 e93a6c4abcc2d280cb3a031c3f14fee63d97fb9b SHA256 021b3865d8c882c0fc8cca7d6b3d2e169610cf2c5fa9419c7decc029170a3724
 DIST sbcl-1.0.26-source.tar.bz2 3299527 RMD160 71b6430403309a4668bd5a5efb88e5339d39b47b SHA1 b13b87b1ea076a56e916d0bced7c62dd675c1efe SHA256 94b258b61c4df509ee1f0ad7451b23b20597fd3f7f3e7cb5d28f3f05fa183b4d
 DIST sbcl-1.0.27-source.tar.bz2 3316031 RMD160 2a00600c02f41254029830ce4c083ff8820a2849 SHA1 4637d1a51b53231390033515dc152376a439941f SHA256 e2dd9574662113a159c6048bd2bb1898b7dc41f31622b4238f38cbf2c0d4c22b
+DIST sbcl-1.0.28-alpha-linux-binary.tar.bz2 7573824 RMD160 37a77f425b285185171c4d8677f367ebdbb362d8 SHA1 a389ae749721987b9f38d1dd25288b14615054b5 SHA256 0bd8125e1375a75b9dda286439dcbe9861d6df5c6fc8475fd217b8b757edf9cc
+DIST sbcl-1.0.28-mipsel-linux-binary.tar.bz2 8099121 RMD160 e58f02a4e2c68c46440fa58c3e951352c2de591b SHA1 4669ee76d4b477255cbe151459085d49703031f5 SHA256 ddff119b6e868b05704b9d171c7defb626a845f991cc0c1ec90fc1c11e022a13
+DIST sbcl-1.0.28-powerpc-linux-binary.tar.bz2 7621107 RMD160 5fc0a18fd620e54bbaeef7d58f759675f6a72e3f SHA1 70126291ccb488ea45b65da3e97fdd320bd1d75b SHA256 b51fe8cd3a998d178fc1876d10016439cfa4ed3566d761c331cacab364acd591
+DIST sbcl-1.0.28-source.tar.bz2 3307445 RMD160 eb381d546dfdf5bb686d756f241459c651a9f5f2 SHA1 984c48d91a75ffd2cd2efaedff9c5563ae5e98e7 SHA256 04026b3922e90c5560a27070d6c48b30b682378f55512a1d2194de71f837f14b
+DIST sbcl-1.0.28-sparc-linux-binary.tar.bz2 8032042 RMD160 ca965bd20980f9f9b528a1c39be4979ad2941660 SHA1 6dea2a9637c272fd9406cd290cbfdbdbf3b0b8dc SHA256 a2e848ac11b0f16bb91866bd187949d908ad94fabb958a0b56320fc0e8b8923e
+DIST sbcl-1.0.28-x86-64-linux-binary.tar.bz2 8159304 RMD160 641a6848a1436ac3b748b21edb8a51aec48165de SHA1 5a8ad915cbe3bf3ec35a299bdbe48babe793c21f SHA256 cbb729bdf8a3517ead305f6d0f3a2c45d8ce1a2a1e30e881731f505adc30997e
+DIST sbcl-1.0.28-x86-linux-binary.tar.bz2 8370430 RMD160 b77461d82484fdf5e251a929fbd797b3256a1de1 SHA1 b57bd4ab78c98766993711ab16e8493e815cbc99 SHA256 68aed5ed7e1fb6f64b789bfa722efe82b23dbee72853ad60d35503e67792b8e4
 EBUILD sbcl-1.0.19.ebuild 6450 RMD160 ce7f46a258867714bcb3caf5daf202287365975a SHA1 ecf26fa06c8e440645ec6779d65ec61bdd803bc7 SHA256 5d056327b6234909c8ac3eb881b5d3d223be4897ff86919dfe0fff0d24dcee6c
 EBUILD sbcl-1.0.26-r10.ebuild 6088 RMD160 54697c9be1f5d27823983e4be5717ddf62f1a4c6 SHA1 91df26aacb3c0ece81df6ea95601440c5fb4779d SHA256 7fcc5b98bcd7d83e9ebd90af4764f3115a4b17f2deba4e64df5eded9ceaec132
 EBUILD sbcl-1.0.27-r10.ebuild 6088 RMD160 c855b019c5aa8a0b3f5322efdd8cb4dd44b46b82 SHA1 3ea385c9b01da5dc05c03b3a3450e6bbe76cde1f SHA256 ae8589f249adc795a033add0086e1368ade23d272c7ced9f766e6082a929fd56
-MISC ChangeLog 45804 RMD160 ab65b72fde13484854c1b6eec3223ab55ed63462 SHA1 358fd05a1ee8ba8407d62a5d007bbc36c251e102 SHA256 f663a5b525d45c9d994b7231aae879a4f87dd5e622ee67c90bff793c809a7d4e
+EBUILD sbcl-1.0.28.ebuild 6015 RMD160 bd2cdb7f6f1d484aad2c7296f253eaf35a3ad627 SHA1 61f02147c4585c9381df2a64370ce3968416bcc6 SHA256 a01f9ce0e57e3dc175e9fb7affb7a697b0305cc3388f205b23fcc34104fe8471
+MISC ChangeLog 45911 RMD160 0f5bdf957502d5f2c5e92fa0cc2c377d25ffbd86 SHA1 8bedf41bbc19f8c7bc58bf62cd07d7ecf8c8c01f SHA256 7fd2cc09cc0239d7e59084db9378a9f6bae1a85a274d388d136c6b2e17262233
 MISC metadata.xml 1192 RMD160 cc9ef1f835468d8901a7fac96ff183cffaa8448f SHA1 d628ab8da2e19ab42b6df9dcd1afc09e3efdcd05 SHA256 b5fb21d6b7020a9ebde8793cfb7209ee1db5c5d6ee0b1c8fd6c7b7e3a3db27b1
